# kwenta-bot

./: .pre-commit-config.yaml  Dockerfile  Taskfile.yml  docker-compose.yml  pyproject.toml
kwenta/: bot.py  config.py
kwenta/cogs/: __init__.py  sheet.py  utility.py
scripts/: get_secret_string.py  make_dotenv.py  make_dotenvrc.py
scripts/templates/: .env.mako
